Task/fix review criteria show alignment (#1018)
* Add shared partial to display review scores/comments on submission admin/panel pages

* Add No Score abbreviation tag helper

* Use new review score/comment partial in admin submission review index pages

* Tweak line-height css in table headers

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -181,6 +181,7 @@ th,
   background-color: $table-head-background;
   font-size: .85em;
   font-weight: bold;
+  line-height: 1.25em;
   text-align: left;
   padding: .25em 0;
   vertical-align: bottom;
